--- a/css/OrderSummary.css
+++ b/css/OrderSummary.css
@@ -38,6 +38,7 @@
   .d-flex.flex-sm-column.flex-row.flex-grow-1.align-items-center.align-items-sm-start.pt-2.text-white.classRule-iiqz{
     background-color:#ffffff !important;
     box-shadow:7px 2px 9px 0px rgba(0,0,0,0.47)  !important;
+    min-height:100vh !important;
   }
   .ms-1.d-none.d-sm-inline.classRule-iwhal{
     color:#5f616e !important;
@@ -203,6 +204,7 @@
   @media (max-width: 480px){
     .d-flex.flex-sm-column.flex-row.flex-grow-1.align-items-center.align-items-sm-start.pt-2.text-white.classRule-iiqz{
       overflow-x:scroll !important;
+      min-height:0vh !important;
     }
     .navbar.navbar-expand-lg.navbar-dark.bg-dark.classRule-iiqih{
       display:none !important;
