--- a/css/Profile.css
+++ b/css/Profile.css
@@ -1,1 +1,413 @@
-.pointer:hover{cursor:pointer;}.table-stripped2 tr:nth-child(even){background-color:#f2f2f2 !important;}.table-stripped2 td:not(:last-child){border-right:3px solid white !important;}.table-stripped2 th:not(:last-child){border-right:3px solid white !important;}.max-width{width:100% !important;}.form-check .form-check-input{display:inline-block !important;margin-top:0.25vw !important;}.flex{display:flex !important;}.w3-row-padding img{margin-bottom:12px !important;}body, h1, h2, h3, h4, h5, h6{font-family:Montserrat, sans-serif !important;}#irwbh{overflow-x:auto !important;}#iti4j{overflow-x:auto !important;}.d-flex.flex-sm-column.flex-row.flex-grow-1.align-items-center.align-items-sm-start.pt-2.text-white.classRule-iiqz{background-color:#ffffff !important;box-shadow:7px 2px 9px 0 rgba(0,0,0,0.49)  !important;}.ms-1.d-none.d-sm-inline.classRule-iwhal{color:#5f616e !important;}.fs-5.bi-house.classRule-i7pmz{color:#5f616e !important;}.ms-1.d-none.d-sm-inline.classRule-ie52v{color:#5f616e !important;}.fs-5.bi-table.classRule-ias88{color:#5f616e !important;}.fs-5.bi-grid.classRule-in8bj{color:#5f616e !important;}.pointer.nav-link.px-4.classRule-i5t9j{color:#000000 !important;}.fs-5.bi-people.classRule-ivc1v{color:#5f616e !important;}.ms-1.d-none.d-sm-inline.classRule-i6z2w{color:#5f616e !important;}#iuglv{margin-bottom:0px !important;}.navbar.navbar-expand-lg.navbar-dark.bg-dark.classRule-iiqih{background-color:#ffffff !important;box-shadow:2px 7px 9px 0px rgba(0,0,0,0.51)  !important;}#iozex{color:black !important;}.pointer.classRule-iozex{max-width:200px !important;}.fs-5.bi-people.classRule-isjci{color:#000000 !important;}.fs-5.bi-gear.classRule-ihq5x{color:#000000 !important;}.ms-1.d-none.d-sm-inline.classRule-iasnj{color:#5f616e !important;}.pointer.nav-link.px-4.classRule-ircth{width:100% !important;}.fs-5.classRule-i3e4h.bi-box-arrow-right{color:#5f616e !important;}.fs-5.classRule-ihq5x.bi-person-fill{color:#107fb2 !important;padding:3px 5px 3px 5px !important;border-radius:50px !important;border:2px solid #107fb2 !important;}.p-2.mw-100.classRule-iuo4f{font-size:17px !important;font-weight:900 !important;}.fs-5.bi-person-fill.classRule-ixali{color:#000000 !important;}.fs-5.classRule-ixali.bi-chat-dots-fill{color:#107fb2 !important;border-radius:50% !important;border:2px solid #107fb2 !important;padding:3px 5px 3px 5px !important;}.wabli-box{min-height:50px;width:auto;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;margin-bottom:0px;}.fs-5.bi-grid.classRule-iwb3m6{color:#000000 !important;}.fs-5.bi-star-fill.classRule-itt4uf{color:#000000 !important;}.fs-5.bi-heart-fill.classRule-il4xmx{color:#000000 !important;}.fs-5.bi-plus.classRule-inolta{color:#000000 !important;}.ms-1.d-none.d-sm-inline.classRule-iqqfk{color:#5f616e !important;}.classRule-iy0zj{font-size:25px !important;}.form-group.flex.wabli-box.classRule-iqbln{justify-content:space-between !important;align-items:center !important;}.bi-envelope.me-3.classRule-igmnf{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.d-flex.flex-row.align-items-center.mb-4.classRule-i8qjj{margin-top:0px !important;margin-right:0px !important;margin-bottom:0px !important;margin-left:0px !important;}.bi-lock.me-3.classRule-ig61m{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.p-2.mw-100.classRule-i311f{font-weight:700 !important;}.card-body.p-md-5.classRule-ij4h{width:35% !important;border-radius:25px !important;box-shadow:2px 7px 9px 0px rgba(0,0,0,0.25)  !important;}.p-2.mw-100.classRule-i6exz{font-weight:700 !important;}.bi-envelope.me-3.classRule-iregu{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.bi-envelope.me-3.classRule-i61vz{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.bi-envelope.me-3.classRule-iqxsws{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.bi-envelope.me-3.classRule-ifv2da{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.bi-envelope.me-3.classRule-ivgy06{position:absolute !important;width:45px !important;height:45px !important;color:rgb(255, 255, 255) !important;background-color:rgb(16, 127, 178) !important;border-top-left-radius:50% !important;border-top-right-radius:50% !important;border-bottom-right-radius:50% !important;border-bottom-left-radius:50% !important;display:flex !important;justify-content:center !important;align-items:center !important;}.d-flex.flex-row.align-items-center.mb-4.classRule-icqii7{position:relative !important;}.col.pt-4.classRule-irwbh{padding:10px  10px  10px  10px !important;}.me-3.classRule-iqxsws.bi-dot{background-color:#107fb2 !important;border-radius:50% !important;width:45px !important;height:45px !important;}.me-3.classRule-iqxsws.bi-dot.bi-toggle-on{display:flex !important;justify-content:center !important;align-items:center !important;color:#ffffff !important;position:absolute !important;}.row.vh-100.overflow-auto.classRule-ider{height:auto !important;}.p-2.mw-100.classRule-iwhngk{padding:10px  0px  10px  55px !important;}.p-2.mw-100.classRule-izcncz{padding:10px  0px  10px  55px !important;}.p-2.mw-100.classRule-ipzav3{padding:10px  0px  10px  55px !important;}.p-2.mw-100.classRule-ioboq3{padding:10px  0px  10px  55px !important;}.p-2.mw-100.classRule-i6zhnz{padding:10px  0px  10px  55px !important;}.p-2.mw-100.classRule-ipqc1o{padding:10px  0px  10px  55px !important;}.p-2.mw-100.classRule-iuwvll{padding:10px  0px  10px  55px !important;}#ij42c3{color:black !important;}.pointer.classRule-ij42c3{max-width:100px !important;height:100px !important;border-radius:25px !important;}.ms-1.d-none.d-sm-inline.classRule-i29sk{color:#5f616e !important;}.fs-5.bi-gear.classRule-iygxr{color:#5f616e !important;}.classRule-ij42c3{max-width:100px !important;height:100px !important;border-radius:18px !important;}@media (max-width: 992px){.card-body.p-md-5.classRule-ij4h{width:65% !important;}}@media (max-width: 480px){.d-flex.flex-sm-column.flex-row.flex-grow-1.align-items-center.align-items-sm-start.pt-2.text-white.classRule-iiqz{overflow-x:scroll !important;}.navbar.navbar-expand-lg.navbar-dark.bg-dark.classRule-iiqih{display:none !important;}.card-body.p-md-5.classRule-ij4h{width:100% !important;}}
+.pointer:hover {
+    cursor: pointer;
+}
+
+.table-stripped2 tr:nth-child(even) {
+    background-color: #f2f2f2 !important;
+}
+
+.table-stripped2 td:not(:last-child) {
+    border-right: 3px solid white !important;
+}
+
+.table-stripped2 th:not(:last-child) {
+    border-right: 3px solid white !important;
+}
+
+.max-width {
+    width: 100% !important;
+}
+
+.form-check .form-check-input {
+    display: inline-block !important;
+    margin-top: 0.25vw !important;
+}
+
+.flex {
+    display: flex !important;
+}
+
+.w3-row-padding img {
+    margin-bottom: 12px !important;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Montserrat, sans-serif !important;
+}
+
+#irwbh {
+    overflow-x: auto !important;
+}
+
+#iti4j {
+    overflow-x: auto !important;
+}
+
+.d-flex.flex-sm-column.flex-row.flex-grow-1.align-items-center.align-items-sm-start.pt-2.text-white.classRule-iiqz {
+    background-color: #ffffff !important;
+    box-shadow: 7px 2px 9px 0 rgba(0, 0, 0, 0.49) !important;
+    min-height:100vh !important;
+}
+
+.ms-1.d-none.d-sm-inline.classRule-iwhal {
+    color: #5f616e !important;
+}
+
+.fs-5.bi-house.classRule-i7pmz {
+    color: #5f616e !important;
+}
+
+.ms-1.d-none.d-sm-inline.classRule-ie52v {
+    color: #5f616e !important;
+}
+
+.fs-5.bi-table.classRule-ias88 {
+    color: #5f616e !important;
+}
+
+.fs-5.bi-grid.classRule-in8bj {
+    color: #5f616e !important;
+}
+
+.pointer.nav-link.px-4.classRule-i5t9j {
+    color: #000000 !important;
+}
+
+.fs-5.bi-people.classRule-ivc1v {
+    color: #5f616e !important;
+}
+
+.ms-1.d-none.d-sm-inline.classRule-i6z2w {
+    color: #5f616e !important;
+}
+
+#iuglv {
+    margin-bottom: 0px !important;
+}
+
+.navbar.navbar-expand-lg.navbar-dark.bg-dark.classRule-iiqih {
+    background-color: #ffffff !important;
+    box-shadow: 2px 7px 9px 0px rgba(0, 0, 0, 0.51) !important;
+}
+
+#iozex {
+    color: black !important;
+}
+
+.pointer.classRule-iozex {
+    max-width: 200px !important;
+}
+
+.fs-5.bi-people.classRule-isjci {
+    color: #000000 !important;
+}
+
+.fs-5.bi-gear.classRule-ihq5x {
+    color: #000000 !important;
+}
+
+.ms-1.d-none.d-sm-inline.classRule-iasnj {
+    color: #5f616e !important;
+}
+
+.pointer.nav-link.px-4.classRule-ircth {
+    width: 100% !important;
+}
+
+.fs-5.classRule-i3e4h.bi-box-arrow-right {
+    color: #5f616e !important;
+}
+
+.fs-5.classRule-ihq5x.bi-person-fill {
+    color: #107fb2 !important;
+    padding: 3px 5px 3px 5px !important;
+    border-radius: 50px !important;
+    border: 2px solid #107fb2 !important;
+}
+
+.p-2.mw-100.classRule-iuo4f {
+    font-size: 17px !important;
+    font-weight: 900 !important;
+}
+
+.fs-5.bi-person-fill.classRule-ixali {
+    color: #000000 !important;
+}
+
+.fs-5.classRule-ixali.bi-chat-dots-fill {
+    color: #107fb2 !important;
+    border-radius: 50% !important;
+    border: 2px solid #107fb2 !important;
+    padding: 3px 5px 3px 5px !important;
+}
+
+.wabli-box {
+    min-height: 50px;
+    width: auto;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    margin-bottom: 0px;
+}
+
+.fs-5.bi-grid.classRule-iwb3m6 {
+    color: #000000 !important;
+}
+
+.fs-5.bi-star-fill.classRule-itt4uf {
+    color: #000000 !important;
+}
+
+.fs-5.bi-heart-fill.classRule-il4xmx {
+    color: #000000 !important;
+}
+
+.fs-5.bi-plus.classRule-inolta {
+    color: #000000 !important;
+}
+
+.ms-1.d-none.d-sm-inline.classRule-iqqfk {
+    color: #5f616e !important;
+}
+
+.classRule-iy0zj {
+    font-size: 25px !important;
+}
+
+.form-group.flex.wabli-box.classRule-iqbln {
+    justify-content: space-between !important;
+    align-items: center !important;
+}
+
+.bi-envelope.me-3.classRule-igmnf {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.d-flex.flex-row.align-items-center.mb-4.classRule-i8qjj {
+    margin-top: 0px !important;
+    margin-right: 0px !important;
+    margin-bottom: 0px !important;
+    margin-left: 0px !important;
+}
+
+.bi-lock.me-3.classRule-ig61m {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.p-2.mw-100.classRule-i311f {
+    font-weight: 700 !important;
+}
+
+.card-body.p-md-5.classRule-ij4h {
+    width: 35% !important;
+    border-radius: 25px !important;
+    box-shadow: 2px 7px 9px 0px rgba(0, 0, 0, 0.25) !important;
+}
+
+.p-2.mw-100.classRule-i6exz {
+    font-weight: 700 !important;
+}
+
+.bi-envelope.me-3.classRule-iregu {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.bi-envelope.me-3.classRule-i61vz {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.bi-envelope.me-3.classRule-iqxsws {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.bi-envelope.me-3.classRule-ifv2da {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.bi-envelope.me-3.classRule-ivgy06 {
+    position: absolute !important;
+    width: 45px !important;
+    height: 45px !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(16, 127, 178) !important;
+    border-top-left-radius: 50% !important;
+    border-top-right-radius: 50% !important;
+    border-bottom-right-radius: 50% !important;
+    border-bottom-left-radius: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.d-flex.flex-row.align-items-center.mb-4.classRule-icqii7 {
+    position: relative !important;
+}
+
+.col.pt-4.classRule-irwbh {
+    padding: 10px 10px 10px 10px !important;
+}
+
+.me-3.classRule-iqxsws.bi-dot {
+    background-color: #107fb2 !important;
+    border-radius: 50% !important;
+    width: 45px !important;
+    height: 45px !important;
+}
+
+.me-3.classRule-iqxsws.bi-dot.bi-toggle-on {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    color: #ffffff !important;
+    position: absolute !important;
+}
+
+.row.vh-100.overflow-auto.classRule-ider {
+    height: auto !important;
+}
+
+.p-2.mw-100.classRule-iwhngk {
+    padding: 10px 0px 10px 55px !important;
+}
+
+.p-2.mw-100.classRule-izcncz {
+    padding: 10px 0px 10px 55px !important;
+}
+
+.p-2.mw-100.classRule-ipzav3 {
+    padding: 10px 0px 10px 55px !important;
+}
+
+.p-2.mw-100.classRule-ioboq3 {
+    padding: 10px 0px 10px 55px !important;
+}
+
+.p-2.mw-100.classRule-i6zhnz {
+    padding: 10px 0px 10px 55px !important;
+}
+
+.p-2.mw-100.classRule-ipqc1o {
+    padding: 10px 0px 10px 55px !important;
+}
+
+.p-2.mw-100.classRule-iuwvll {
+    padding: 10px 0px 10px 55px !important;
+}
+
+#ij42c3 {
+    color: black !important;
+}
+
+.pointer.classRule-ij42c3 {
+    max-width: 100px !important;
+    height: 100px !important;
+    border-radius: 25px !important;
+}
+
+.ms-1.d-none.d-sm-inline.classRule-i29sk {
+    color: #5f616e !important;
+}
+
+.fs-5.bi-gear.classRule-iygxr {
+    color: #5f616e !important;
+}
+
+.classRule-ij42c3 {
+    max-width: 100px !important;
+    height: 100px !important;
+    border-radius: 18px !important;
+}
+
+@media (max-width: 992px) {
+    .card-body.p-md-5.classRule-ij4h {
+        width: 65% !important;
+    }
+}
+
+@media (max-width: 480px) {
+    .d-flex.flex-sm-column.flex-row.flex-grow-1.align-items-center.align-items-sm-start.pt-2.text-white.classRule-iiqz {
+        overflow-x: scroll !important;
+        min-height:0vh !important;
+    }
+
+    .navbar.navbar-expand-lg.navbar-dark.bg-dark.classRule-iiqih {
+        display: none !important;
+    }
+
+    .card-body.p-md-5.classRule-ij4h {
+        width: 100% !important;
+    }
+}
