--- a/css/EditProduct.css
+++ b/css/EditProduct.css
@@ -21,7 +21,7 @@
     margin-bottom:12px !important;
   }
   body, h1, h2, h3, h4, h5, h6{
-    font-family:Montserrat, sans-serif !important;
+    font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji !important;
   }
   .rounded-3{
     border-radius:0.3rem !important;
