--- a/css/NewProduct.css
+++ b/css/NewProduct.css
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: Montserrat, sans-serif !important;
+    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji !important;
 }
 
 .rounded-3 {
