--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ body {
     line-height: 1.25;
     letter-spacing: 0.5px;
     color: var(--color-primary) !important;
+    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji !important;
     overflow-x: hidden !important;
     background-color: var(--color-background) !important;
 }
