--- a/css/Products.css
+++ b/css/Products.css
@@ -233,6 +233,7 @@
   }
   .fs-5.classRule-iqbms.bi-heart-fill{
     padding:10px 10px 0px 10px !important;
+    cursor: pointer;
     color:#5f616e;
   }
   .fs-5.bi-heart-fill.classRule-inb7i{
