Add favorite suppliers

--- a/css/Suppliers.css
+++ b/css/Suppliers.css
@@ -355,7 +355,7 @@ h6 {
 }
 
 .fs-5.bi-heart-fill.classRule-it4v8l {
-    color: #5f616e !important;
+    color: #f1b604 !important;
 }
 
 .form-group.flex.wabli-box.classRule-ifofzz {
@@ -450,7 +450,7 @@ h6 {
 }
 
 .fs-5.bi-heart-fill.classRule-i02mju {
-    color: #5f616e !important;
+    color: #f1b604 !important;
 }
 
 .form-group.flex.wabli-box.classRule-iyr9xo {
